--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,8 @@
 }
 
 .anime-container {
-    width: 100%;
+    margin: 20px;
+    width: 95%;
     padding: 20px;
     margin-top: 50px;
     background-color:black;
@@ -65,8 +66,9 @@
     gap: 20px;
     padding: 5px;
     width: 100%;
-    min-width: 500px;
-    max-width: 800px;
+
+
+
 }
 
 .main-title {
